# aaaaAAAA

./: .gitignore  README.md  build.py  continuous_duckies.py  pyproject.toml  tox.ini
.github/workflows/: continuous-duckies.yaml  lint.yaml  release.yml
aaaaAAAA/: __main__.py  _sprites.py  constants.py  game.py  main.py  menu.py  procedural_duckies.py  procedural_humes.py  rules.py
aaaaAAAA/__pyinstaller/: hook-aaaaAAAA.__main__.py
aaaaAAAA/ducky_generation/: procedural_duck_people.py  procedural_duckies.py
assets/duck-builder/: README.md
